@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Changed: progressed further with GEDFact_assistant/MEDIA/ submodule
  - Merged: Merge changes r5468 - r5486 from the trunk. (windmillway)
  - Changed: Correct Paste-back links for Media add links (after svn 5424 autocomplete change)
  - Changed: More tidying up of GED_Fact module. (windmillway)
